연산 (operation) 문서화

--- a/doc/글로벌 객체.md
+++ b/doc/글로벌 객체.md
@@ -59,7 +59,7 @@ console.log($js);
 * 템플릿이 파싱될때가 아닌 `<sound>` task가 실행될때 해당 media 객체가 등록됩니다.
 * `destroy` 가 호출되면 media 객체가 삭제됩니다.
 
-또한 media 객체를 삭제할 수있는 `destroy` 메서드가 함께 있으므로 sound 아이디로 `destroy`는 사용할 수 없습니다.
+> media 객체를 삭제할 수있는 `destroy` 메서드가 함께 있으므로 sound 아이디로 `destroy`는 사용할 수 없습니다.
 
 ```html
 <!--sound task 정의-->
