연산 (operation) 문서화

--- a/doc/component/컨테이너 요소.md
+++ b/doc/component/컨테이너 요소.md
@@ -2,6 +2,8 @@
 
 내부 child Element들의 위치, 크기, 정렬에 영향을 줍니다.
 
+* [Layout Demo](../demo/layout.html)
+
 * `<is-group>`, `<is-layout>`, `<is-app>`, `<is-page>`
 * 공통 style : `position: relative`
 
