미디어 컨트롤 도움말

--- a/doc/task/드래그앤드랍.md
+++ b/doc/task/드래그앤드랍.md
@@ -80,7 +80,7 @@
     // - drop 후 드랍 element에서 발송함
 </template>
 ```
-드래그 앤 드랍 과정ㅇ에서 발생하는 이벤트입니다.  
+드래그 앤 드랍 과정에서 발생하는 이벤트입니다.  
 
 ```html
 <template>
