--- a/doc/글로벌 객체.md
+++ b/doc/글로벌 객체.md
@@ -67,7 +67,7 @@ console.log($js);
        run="play()" wait="ended"></sound>
 ```
 
-sound task가 실행되었다고 하면 `<sound>` task를 JS 코드에서 제할 수 있습니다.
+sound task가 실행되었다고 하면 `<sound>` task를 JS 코드에서 제어할 수 있습니다.
 
 ```javascript
 // "sound1" task가 실행되면 $sound 객체에 해당 media가 등록됩니다.
@@ -94,6 +94,55 @@ $sound.destroy('sound1', 'all');
 console.log($sound);
 // {destroy: Function}
 ```
+
+### $video (v 0.1.4~)
+
+`<video>` task가 실행될때 생성된 media 객체가 video 아이디로 등록되어 있습니다.  
+사용 방법은 `$sound` 객체와 같습니다.  
+
+```html
+<!--video task 정의-->
+<as-task>
+    <video id="id_videoContents" selector="#videoContents"></video>
+</as-task>
+
+...
+
+<!--
+video dom 정의
+-->
+<video id="videoContents" style="height: 100%"
+       src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+       template="#video-controller" task:update="비디오상태변경"></video>
+```
+
+`template` 적용 방법은 비디오 DEMO에서 확인
+  * [비디오](../test/video.html) `ver 0.1.4`
+
+### $audio (v 0.1.4~)
+
+`<audio>` task가 실행될때 생성된 media 객체가 audio 아이디로 등록되어 있습니다.  
+사용 방법은 `$sound` 객체와 같습니다.  
+(`$audio` 객체는 주로 DOM에 이미 audio Element가 생성되어 있을때 사용합니다.)
+
+```html
+<!--video task 정의-->
+<as-task>
+    <audio id="id_audioContents" selector="#audioContents"></audio>
+</as-task>
+
+...
+
+<!--
+video dom 정의
+-->
+<audio id="audioContents"
+       src="..."
+       template="#audio-controller" task:update="상태변경"></audio>
+```
+
+`template` 적용 방법은 비디오의 경우와 같습니다.  
+* [비디오](../test/video.html) `ver 0.1.4`
 
 ### $break
 
