미디어 컨트롤 도움말

--- a/doc/task/드래그앤드랍.md
+++ b/doc/task/드래그앤드랍.md
@@ -20,7 +20,7 @@
     
     <!--드래그 설정-->
     <div data-dnd-group="드래그/드랍이 서로 호환(허용)되는 그룹 네이밍"
-         data-drag-value="드랍 가능한지 비교할 값"
+         data-drag-value="드랍 가능한지 비교할 값 (성공 여부 판별)"
          data-dnd-type="copy | move (default)">
     </div>
 
@@ -41,7 +41,7 @@
 
     <!--드랍 설정-->
     <div data-dnd-group="드래그/드랍이 서로 호환(허용)되는 그룹 네이밍"
-         data-drop-value="드랍 가능한지 비교할 값"></div>
+         data-drop-value="드랍 가능한지 비교할 값 (성공 여부 판별)"></div>
 
 </template>
 ```
