미디어 컨트롤 도움말

--- a/doc/task/미디어 컨트롤.md
+++ b/doc/task/미디어 컨트롤.md
@@ -3,7 +3,7 @@
 `ver 0.1.4` 버전부터 `<video>`, `<audio>` task와 함께 `$viideo`, `$audio` 전역객체가 추가되었습니다.  
 
 ## DEMO
-* [비디오 컨트롤러](../test/video.html) `ver 0.1.4`
+* [비디오 컨트롤러](../../test/video.html) `ver 0.1.4`
 
 ## 사용 방법
 
