--- a/doc/task/미디어 컨트롤.md
+++ b/doc/task/미디어 컨트롤.md
@@ -14,9 +14,11 @@
 HTML5 표준으로 `video` 태그를 사용하여 구성합니다.
 ```html
 <template>
-    
+
+    <!--video-container: video 상태가 변경되면 class에 이벤트 이름의 class가 자동 업데이트됨-->
     <div video-container style="height: 300px;">
-        
+
+        <!--video task:update="" 사용 가능함 (update 이벤트 발생함)-->
         <video id="videoContents" style="height: 100%"
                src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
             <!--
@@ -52,6 +54,7 @@ HTML5 표준으로 `video` 태그를 사용하여 구성합니다.
 
 재생중 음소거 상태가 되면 `video-container`에 다음과 같이 class가 업데이트 됩니다.
 ```html
+<!--video-container: video 상태가 변경되면 class에 이벤트 이름의 class가 자동 업데이트됨-->
 <div video-container class="play muted">
     ...
 </div>
@@ -99,6 +102,7 @@ HTML5 표준으로 `video` 태그를 사용하여 구성합니다.
 
     <template id="video-controller">
 
+        <!--video-controller task:update="" 사용 가능함 (update 이벤트 발생함)-->
         <div video-controller>
 
             <!--프로그래시브바-->
