markdown 문서 로드 로직 수정

--- a/doc/0.1.x/task/미디어 컨트롤.md
+++ b/doc/0.1.x/task/미디어 컨트롤.md
@@ -3,7 +3,7 @@
 `ver 0.1.4` 버전부터 `<video>`, `<audio>` task와 함께 `$viideo`, `$audio` 전역객체가 추가되었습니다.  
 
 ## DEMO
-* [비디오 컨트롤러](../../test/video.html) `ver 0.1.4`
+* [비디오 컨트롤러](../test/video.html) `ver 0.1.4`
 
 ## 사용 방법
 
@@ -62,7 +62,7 @@ HTML5 표준으로 `video` 태그를 사용하여 구성합니다.
 
 > fullscreen 상태는 class로 제공하지 않습니다.  
 > 대신 CSS에서 `:fullscreen` selector로 상태를 감지할 수 있습니다.  
-> [video.scss](../../test/video/video.scss)에서 상태 표현 내용을 참고할 수 있습니다.
+> [video.scss](../test/video/video.scss)에서 상태 표현 내용을 참고할 수 있습니다.
 
 
 ### 컨트롤러 템플릿
@@ -91,10 +91,9 @@ HTML5 표준으로 `video` 태그를 사용하여 구성합니다.
 * 각 attribute은 특별한 기능을 자동 생성해줍니다.
 * 각 attribute은 기본 CSS 스타일 적용을 위한 selector로 사용됩니다.
 * 사용자 스킨을 만들기 위해서 기본 CSS 내용을 재정의합니다.
-* 기본 CSS 내용은 다음 파일을 참고 ([video.scss](../../test/video/video.scss))
+* 기본 CSS 내용은 다음 파일을 참고 ([video.scss](../test/video/video.scss))
 
 ```html
-
 <template>
     <!--task template 안에 작성합니다.-->
     
