--- a/doc/0.1.x/글로벌 객체.md
+++ b/doc/0.1.x/글로벌 객체.md
@@ -47,7 +47,6 @@ console.log($js);
 `$js` 객체는 조건문에서 많이 사용됩니다.
 
 ```html
-
 <cancel if="$js.counter === 4"></cancel>
 <!--counter 값이 4이면 부목 task를 취소합니다.-->
 ```
@@ -117,7 +116,7 @@ video dom 정의
 ```
 
 `template` 적용 방법은 비디오 DEMO에서 확인
-  * [비디오](../test/video.html) `ver 0.1.4`
+  * [비디오](./test/video.html) `ver 0.1.4`
 
 ### $audio (v 0.1.4~)
 
@@ -142,7 +141,7 @@ video dom 정의
 ```
 
 `template` 적용 방법은 비디오의 경우와 같습니다.  
-* [비디오](../test/video.html) `ver 0.1.4`
+* [비디오](./test/video.html) `ver 0.1.4`
 
 ### $break
 
