--- a/doc/0.2.x/feature/드래그앤드랍.md
+++ b/doc/0.2.x/feature/드래그앤드랍.md
@@ -205,10 +205,10 @@ event.detail.position = {
 <div data-drop-value="answer" data-dnd-group="page1"></div>
 
 <task id="정답">
-    <js><!--<![ CDATA [ showSuccess($args, $next); //]]>--></js>
+    <script> showSuccess($args, $next); </script>
 </task>
 <task id="오답">
-    <js><!--<![ CDATA [ showFail($args, $next); //]]>--></js>
+    <script> showFail($args, $next); </script>
 </task>
 ```
 
