--- a/doc/0.2.x/taskml/글로벌_객체.md
+++ b/doc/0.2.x/taskml/글로벌_객체.md
@@ -25,15 +25,15 @@ $task["task 아이디"]?.('매개변수');
 
 ### $js
 
-`<js>` task에서 코드가 실행되는 context 입니다.
+`<js>` (= `<script>`) task에서 코드가 실행되는 context 입니다.
 
 ```html
 <!--JS task-->
-<js><!--<![ CDATA [
+<script>
     // this context
     if(!this.counter) this.counter = 0;
     $next();
-//]]>--></js>
+</script>
 ```
 
 js task에서 사용한 context는 `$js` 객체입니다.
